--- a/trunk/docs/tutorials/009/Makefile
+++ b/trunk/docs/tutorials/009/Makefile
@@ -12,7 +12,7 @@ FILES  =
 
 BUILD	= $(VBIN)
 
-# SRC = $(addsuffix .cpp,$(BIN)) $(addsuffix .cpp,$(FILES))
+SRC = $(addsuffix .cpp,$(BIN))
 
 HDR = *.h
 
@@ -34,7 +34,7 @@ include	$(ACE_ROOT)/include/makeinclude/rules.local.GNU
 
 Indent : #
 	for i in $(SRC) $(HDR) ; do \
-		indent -npsl -l80 -fca -fc1 -cli0 -cdb < $$i | \
+		indent -npsl -bli0 -l80 -fca -fc1 -cli0 -cdb < $$i | \
 			sed -e 's/: :/::/g'  \
 			    -e 's/^.*\(public:\)/\1/' \
 			    -e 's/^.*\(protected:\)/\1/' \
