*** empty log message ***

--- a/trunk/docs/tutorials/002/Makefile
+++ b/trunk/docs/tutorials/002/Makefile
@@ -8,7 +8,7 @@
 #	Local macros
 #----------------------------------------------------------------------------
 
-BIN   	= server
+BIN   	= server foo
 
 VLDLIBS = $(LDLIBS:%=%$(VAR))
 
