*** empty log message ***

--- a/trunk/docs/tutorials/006/Makefile
+++ b/trunk/docs/tutorials/006/Makefile
@@ -86,6 +86,9 @@ Indent : #
 Depend : depend
 	perl fix.Makefile
 	
+.depend : #
+	touch .depend
+
 #----------------------------------------------------------------------------
 #	Dependencies
 #----------------------------------------------------------------------------
