--- a/trunk/apps/gperf/tests/Makefile
+++ b/trunk/apps/gperf/tests/Makefile
@@ -74,3 +74,9 @@ all:
 	./aout -v < $(srcdir)/c.gperf > test-7.out
 	-diff -b $(srcdir)/test-7.exp test-7.out
 
+# DO NOT DELETE THIS LINE -- g++dep uses it.
+# DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
+
+
+
+# IF YOU PUT ANYTHING HERE IT WILL GO AWAY
