--- a/trunk/TAO/examples/Simple/Makefile
+++ b/trunk/TAO/examples/Simple/Makefile
@@ -8,7 +8,11 @@
 #	Local macros
 #----------------------------------------------------------------------------
 
-DIRS  = time
+DIRS  = bank \
+	chat \
+	echo \
+	grid \
+	time
 
 #----------------------------------------------------------------------------
 #	Include macros and targets
