--- a/trunk/docs/tutorials/007/Makefile
+++ b/trunk/docs/tutorials/007/Makefile
@@ -87,7 +87,10 @@ Indent : #
 	# include just like the makefile components above.
 Depend : depend
 	perl fix.Makefile
-	
+
+.depend : #
+	touch .depend
+
 #----------------------------------------------------------------------------
 #	Dependencies
 #----------------------------------------------------------------------------
