--- a/trunk/TAO/orbsvcs/orbsvcs/Makefile
+++ b/trunk/TAO/orbsvcs/orbsvcs/Makefile
@@ -26,6 +26,8 @@ endif
 TAO_IDLFLAGS = -Wb,export_macro=TAO_ORBSVCS_Export \
 	       -Wb,export_include=orbsvcs_export.h \
                $(TAO_LACKS_EVENT_CHANNEL_ANY)
+TAO_IDLFLAGS += -Gc
+
 
 IDL_SRCS= \
 	CosConcurrencyControl \
