*** empty log message ***

--- a/trunk/TAO/orbsvcs/tests/Simple_Naming/Makefile
+++ b/trunk/TAO/orbsvcs/tests/Simple_Naming/Makefile
@@ -13,6 +13,7 @@ TAO_ROOT = $(ACE_ROOT)/TAO
 endif
 
 LDLIBS =  -lorbsvcs -lTAO
+#TAO_IDLFLAGS 	+= -Gc
 
 IDL_SRC	= test_objectC.cpp test_objectS.cpp
 CLIENT_SRC = client.cpp
