*** empty log message ***

--- a/trunk/TAO/examples/Makefile
+++ b/trunk/TAO/examples/Makefile
@@ -10,7 +10,8 @@
 #	Local macros
 #----------------------------------------------------------------------------
 
-DIRS  = POA \
+DIRS  = Callback_Quoter \
+        POA \
 	Quoter \
 	Simple
 
