--- a/trunk/apps/JAWS/PROTOTYPE/JAWS/Makefile
+++ b/trunk/apps/JAWS/PROTOTYPE/JAWS/Makefile
@@ -14,6 +14,8 @@ LIB = libJAWS.a
 SHLIB = libJAWS.$(SOEXT)
 
 MYFILES  	= \
+        Headers \
+        Parse_Headers \
 	Waiter \
 	Reaper \
 	Pipeline \
