*** empty log message ***

--- a/trunk/docs/tutorials/014/Makefile
+++ b/trunk/docs/tutorials/014/Makefile
@@ -33,7 +33,7 @@ include	$(ACE_ROOT)/include/makeinclude/rules.local.GNU
 #----------------------------------------------------------------------------
 
 HTML : #
-	../combine *.html
+	perl ../combine *.html
 
 rename : #
 	for i in *.cxx ; do	\
